# lecture_code_repo

./: .gitignore  note.md  readme.md
src/hik_camera/: CMakeLists.txt  package.xml
src/hik_camera/config/: camera_info.yaml  camera_params.yaml
src/hik_camera/hikSDK/include/: MvCameraControl.h
src/hik_camera/include/hik_camera_node/: hik_camera_node.hpp
src/hik_camera/launch/: hik_camera.launch.py
src/hik_camera/src/: hik_camera_node.cpp
src/libxr/: CMakeLists.txt
src/libxr/libxr/: CMakeLists.txt
src/libxr/libxr/driver/Linux/: linux_uart.hpp
src/rm_auto_aim/: README.md
src/rm_auto_aim/armor_detector/: CMakeLists.txt  README.md  package.xml
src/rm_auto_aim/armor_detector/include/armor_detector/: armor.hpp  armor_pose_optimizer.hpp  detector.hpp  detector_node.hpp  light_corner_corrector.hpp  number_classifier.hpp  pnp_solver.hpp
src/rm_auto_aim/armor_detector/src/: armor_pose_optimizer.cpp  detector.cpp  detector_node.cpp  light_corner_corrector.cpp  number_classifier.cpp  pnp_solver.cpp
src/rm_auto_aim/armor_detector/test/: test_node_startup.cpp  test_number_cls.cpp
src/rm_auto_aim/armor_tracker/: CMakeLists.txt  README.md  package.xml
src/rm_auto_aim/armor_tracker/include/armor_tracker/: extended_kalman_filter.hpp  tracker.hpp  tracker_node.hpp
src/rm_auto_aim/armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
src/rm_auto_aim/armor_tracker/test/: test_once_trajectory.cpp
src/rm_auto_aim/auto_aim_interfaces/: CMakeLists.txt  package.xml
src/rm_auto_aim/auto_aim_interfaces/msg/: Send.msg  Target.msg  TrackerInfo.msg  TrajectoryInfo.msg
src/rm_auto_aim/planning_trajectory/: CMakeLists.txt  package.xml
src/rm_auto_aim/planning_trajectory/include/planning_trajectory/: table.hpp  trajectory.hpp  trajectory_node.hpp  trajectory_solver.hpp
src/rm_auto_aim/planning_trajectory/src/: trajectory.cpp  trajectory_node.cpp  trajectory_solver.cpp
src/rm_auto_aim/planning_trajectory/tools/: TableGenerator.cpp  a.out
src/rm_gimbal_description/: package.xml
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/rm_serial_driver/: CMakeLists.txt  package.xml  readme.md
src/rm_serial_driver/config/: serial.yaml
src/rm_serial_driver/include/rm_serial_driver/: SharedTopic.hpp  SharedTopicClient.hpp  rm_serial_driver.hpp
src/rm_serial_driver/launch/: ros2_libxr_launch.py
src/rm_serial_driver/src/: rm_serial_driver.cpp
src/rm_serial_driver/test/: test_gimbal_controll.cpp  test_timestamp_calibrator.cpp
src/rm_vision/rm_vision_bringup/: CMakeLists.txt  package.xml
src/rm_vision/rm_vision_bringup/config/: camera_info.yaml  camera_info_lob.yaml  launch_params.yaml  node_params.yaml
src/rm_vision/rm_vision_bringup/launch/: common.py  no_hardware.launch.py  simulator.launch.py  video.launch.py  vision_bringup.launch.py
